--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "arduino/libraries/LiquidCrystall_I2C"]
 	path = arduino/libraries/LiquidCrystall_I2C
 	url = https://github.com/fdebrabander/Arduino-LiquidCrystal-I2C-library
+[submodule "server/mjpeg-tools"]
+	path = server/mjpeg-tools
+	url = https://github.com/royendgel/mjpeg-tools
